# workout-mcp

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  mcp_server_main.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 2ce07b737b30_add_unique_constraints_for_upsert.py  9d409c54bac0_initial_migration_create_routine_.py  b42ad313b006_add_distance_km_duration_seconds_make_.py  b8f6323baaf4_expand_workout_exercise_unique_.py  f300f63fc4a0_add_sync_state_and_workout_fields.py
docs/design/: roadmap.md
docs/plans/: 2026-05-16-wave-1-infrastructure.md  2026-05-17-wave-2-data-ingestion.md  2026-05-18-wave-3-mcp-server.md  2026-05-19-wave-4-polish-hardening.md  2026-05-23-wave-5-autosync.md  2026-05-24-wave-6-api-key.md
docs/superpowers/plans/: 2026-06-06-bom-csv-parse-fix.md
docs/superpowers/specs/: 2026-06-06-bom-csv-parse-fix-design.md
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_hevy_client.py  test_hevy_mapper.py  test_logging.py  test_main.py  test_mcp_server_main.py  test_mcp_tools.py  test_models.py  test_parser.py  test_sync.py  test_sync_service.py  test_webhook.py
tests/fixtures/: all_empty_metrics.csv  cardio.csv  cardio_only.csv  duplicate_exercise.csv  empty.csv  hybrid.csv  invalid_weight.csv  malformed_date.csv  missing_columns.csv  sample_hevy.csv  treadmill.csv  weight_without_reps.csv
workout_mcp/: __init__.py  api.py  config.py  database.py  hevy_client.py  hevy_mapper.py  logging.py  mcp_server.py  models.py  parser.py  sync.py  sync_service.py
